# Rost

./: .gitignore  README.md
AoC2022/day1/src/: main.rs
RostBuch/branches/src/: main.rs
RostBuch/collections/src/: main.rs
RostBuch/enums/src/: main.rs
RostBuch/error_handling/src/: main.rs
RostBuch/fibonacci_calculator/src/: main.rs
RostBuch/functional_aspects/: Cargo.toml
RostBuch/functional_aspects/src/: main.rs
RostBuch/functions/src/: main.rs
RostBuch/guessing_game/src/: main.rs
RostBuch/minigrep/src/: lib.rs  main.rs
RostBuch/refrences_borrowing/src/: main.rs
RostBuch/structs/src/: main.rs
RostBuch/temperature_converter/src/: main.rs
RostBuch/tests/src/: lib.rs
RostBuch/traits/src/: main.rs
clap_test/: Cargo.toml
clap_test/src/: main.rs
db_test/: Cargo.toml
db_test/src/: main.rs
rost_notify/: Cargo.toml  test.md
rost_notify/src/: main.rs
sitUpStraight/: Cargo.toml
sitUpStraight/src/: main.rs
waterTimer/: Cargo.toml
waterTimer/src/: main.rs
