[package]
name = "clap_test"
version = "0.1.0"
edition = "2021"
authors = ["Max Weiberle"]
description = "A simple to use, efficient, and full-featured Command Line Argument Parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
